--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@sentry/react": "^9.27.0",
+    "@sentry/vite-plugin": "^3.5.0",
     "@tailwindcss/vite": "^4.1.8",
     "@tanstack/react-query": "^5.80.6",
     "@types/react-router-dom": "^5.3.3",
